# Cheers

./: .cursorrules  .dockerignore  .env.bak  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  AGENTS.zh-CN.md  AgentNexus_工业软件竞品分析.html  AgentNexus_工业软件竞品分析.md  AgentNexus_工业软件竞品分析.zh-CN.md  CHANGELOG.md  CLAUDE.md  CLAUDE.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  FRONTEND.md  FRONTEND.zh-CN.md  LICENSE  Makefile  PROJECT_OVERVIEW.md  PROJECT_OVERVIEW.zh-CN.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.zh-CN.md  docker-compose.production.tls.yml  docker-compose.yml  docker-compose.yml.bak  docker-compose.yml.template  openclaw.sh  pytest.ini  run_backend.ps1  rustfs-issues-analysis.md  rustfs-issues-analysis.zh-CN.md  test_db_conn.py  ty.toml
apps/macos/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
backend/: .dockerignore  .env.example  Dockerfile  alembic_context.ini  entrypoint.sh  pyproject.toml  requirements-prod.txt  requirements.txt  run_dev.ps1
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_bot_registration_requests.py  003_add_bot_intro.py  004_add_password_hash.py  005_add_bot_avatar_url.py  005_add_bot_openclaw_session_token.py  006_add_task_and_reply_to_on_messages.py  008_add_bot_prompt_template.py  009_add_bot_model_config.py  010_restructure_bot_architecture.py  011_add_friendships.py  012_add_channel_auto_assist.py  013_add_user_bio_and_channel_profiles.py  014_add_file_records_storage_and_bot_created_by.py  015_add_workspace_memberships.py  016_add_secret_message.py  017_nullable_bot_model_template.py  018_system_settings.py  019_add_is_public_to_bots_and_models.py  020_add_created_by_to_ai_models.py  021_email_verification.py  022_add_bulletin_issues_table.py  023_add_mention_user_ids_to_messages.py  024_add_history_pages.py  025_add_memory_entries.py  026_add_channel_membership_template.py  027_add_template_created_by.py  028_add_msg_type.py  029_add_content_data.py  030_add_bot_binding_type_and_config.py  031_add_bot_websocket_token.py  032_add_openclaw_plugin_events.py  033_add_membership_last_read_at.py  034_add_workspace_kind.py  035_rename_thread_to_topic.py  036_add_message_is_partial.py  037_add_bot_scope.py  038_add_channel_membership_role.py  038_add_workspace_avatar_url.py  039_add_workspace_avatar_url.py  (+29 more)
backend/alembic_context/: env.py  script.py.mako
backend/alembic_context/versions/: 001_initial_context_store.py
backend/app/: __init__.py  agent_bridge_docs_routes.py  config.py  docs_paths.py  http_client.py  logging_config.py  main.py  manual_routes.py  openclaw_docs_routes.py  public_routes.py
backend/app/adapters/: __init__.py  base.py  http_openclaw.py  llm_bot.py  mock.py  unified_builtin.py  ws_openclaw.py
backend/app/admin/: __init__.py  log_buffer.py  models.py  routes.py  settings_store.py  templates.py
backend/app/assistant/: adapter.py
backend/app/auth/: __init__.py  email_service.py  jwt_utils.py  password_utils.py  routes.py
backend/app/bulletin/: routes.py  schemas.py
backend/app/chat_core/: __init__.py  bots.py  channels.py  context_api.py  friends.py  mcp_import.py  messages.py  schemas.py  tasks_api.py  workspaces.py  ws_manager.py
backend/app/contracts/: messages.py
backend/app/core/: builtin_defaults.py  dependencies.py  exceptions.py  localization.py  log_context.py  middleware.py  prompt_templates.py  responses.py  schemas.py
backend/app/db/: __init__.py  models.py  seed.py  session.py
backend/app/file_processor/: __init__.py  convert.py  routes.py  service.py
backend/app/guide/: __init__.py  adapter.py  adapter_origin.py  constants.py  help_index.py  llm_client.py
backend/app/image_gen/: intent.py  routes.py  service.py
backend/app/memory/: __init__.py  context_store.py  files_index.py  manager.py  recent_update.py
backend/app/orchestrator/: __init__.py  adapter_resolver.py  mention.py  orchestrator_adapter.py  service.py
backend/app/repositories/: bot_repo.py  bulletin_repo.py  channel_repo.py  file_repo.py  friendship_repo.py  message_repo.py  task_repo.py  user_repo.py  workspace_repo.py
backend/app/services/: __init__.py  admin_service.py  auth_service.py  avatar_service.py  bot_service.py  bulletin_service.py  channel_service.py  context_service.py  document_set_service.py  file_retention.py  file_scope_service.py  file_service.py  friendship_service.py  generated_file_service.py  (+10 more)
backend/scripts/: check_alembic_heads.sh
gateway/: Cargo.toml
gateway/src/: app_state.rs  config.rs  errors.rs  main.rs
server/: Cargo.toml  Dockerfile
server/.dev/: run-dev.sh
server/assets/: install.sh
server/migrations/: 0001_baseline.sql  0002_permission_and_config.sql  0003_decentralized_mesh.sql  0004_session_scope_state.sql  0005_acp_capability_delegations.sql  0006_acp_capability_reject_logs.sql  0007_message_depth.sql  0008_agent_bridge_runtime_session_status.sql  0009_workbench_plugins.sql  0010_workbench_templates.sql  0011_rename_memory_files_to_context_files.sql  0012_rename_context_files_pkey.sql  0013_drop_session_topic.sql  0014_drop_session_dm_id.sql  0015_personal_workspace.sql  0016_dm_key.sql  0017_drop_file_scope_links.sql  0018_staged_files.sql  0019_acp_approval.sql  0020_message_traces.sql  0021_session_revocation.sql  0022_user_blocks.sql  0023_cascade_channel_workspace_delete.sql  0024_enrollment_codes.sql  0025_workspace_invite_status.sql  0026_bot_disabled.sql  0027_bot_permission_rules.sql  0028_approver_operation_kind.sql  0029_bot_event_access.sql  0030_drop_bot_permission_rules.sql  0031_acp_event_log.sql  0032_event_access_group_subject.sql  0033_session_primary_partial_unique.sql  0034_bot_available_commands.sql  0035_bot_session_plans.sql  0036_bot_usage_events.sql  0037_file_preview_rendition.sql  0038_transcribe_requested.sql  0039_bot_connection_events.sql  0040_user_bot_status_info.sql  (+22 more)
server/src/: app_state.rs  config.rs  errors.rs  lib.rs  main.rs  router.rs
server/tests/: flows.rs  official_plugins.rs
services/voice-transcriber/: Dockerfile  README.md  pyproject.toml  transcriber.py
(+1320 files in other folders)
