[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentnexus-backend"
version = "0.1.0"
description = "AgentNexus 智枢协作平台 - 后端"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web & Async
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    # 数据库
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    # Redis
    "redis>=5.2.0",
    "boto3>=1.42.0",
    # 配置与环境
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # 文件转换
    "mammoth>=1.8.0",
    "markdown>=3.5.0",
    "pymupdf>=1.24.0",
    "openpyxl>=3.1.0",
    # 密码哈希与认证
    "passlib>=1.7.4",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "httpx>=0.28.1",
    "langchain>=0.3",
    "langchain-openai>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov",
    "httpx>=0.28.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

# uv 镜像配置 - 使用阿里云 PyPI 镜像
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
