[package]
name    = "gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
# ── 运行时 ──────────────────────────────────────────────────────────────────
tokio        = { version = "1",   features = ["full"] }
axum         = { version = "0.7", features = ["ws", "macros"] }
tower        = "0.4"
tower-http   = { version = "0.5", features = ["cors", "trace"] }

# ── 数据库 ───────────────────────────────────────────────────────────────────
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }

# ── 序列化 ───────────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── 类型 ─────────────────────────────────────────────────────────────────────
uuid   = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# ── 认证 ─────────────────────────────────────────────────────────────────────
jsonwebtoken = "9"

# ── 日志 / 追踪 ───────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── 错误处理 ──────────────────────────────────────────────────────────────────
thiserror = "1"
anyhow    = "1"

# ── 配置 ──────────────────────────────────────────────────────────────────────
dotenvy = "0.15"

# ── 并发数据结构 ──────────────────────────────────────────────────────────────
dashmap = "6"

# ── async trait ───────────────────────────────────────────────────────────────
async-trait = "0.1"

# ── LRU 缓存（成员资格缓存）──────────────────────────────────────────────────
lru = "0.12"

# ── Redis（fan-out + bot task dispatch）──────────────────────────────────────
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
futures-util = "0.3"

# ── 密码 / 哈希 ───────────────────────────────────────────────────────────────
sha2 = "0.10"
hex  = "0.4"

# ── S3 ────────────────────────────────────────────────────────────────────────
aws-sdk-s3 = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
