[package]
name    = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[features]
# Gates the tests/flows.rs integration suite (needs a live Postgres via
# DATABASE_URL). Off by default so the unit `cargo test` job needs no DB;
# the integration CI job runs `cargo test --features integration --test flows`.
integration = []

[dependencies]
# Shared Agent Bridge frame types — same crate the connector uses, so frame
# drift between the two ends is a compile error. Path dep: the gateway docker
# build uses the repo-root context to include it (see server/Dockerfile).
cheers-bridge-protocol = { path = "../packages/cheers-acp-connector-rs/bridge-protocol" }
# ── 运行时 ──────────────────────────────────────────────────────────────────
tokio        = { version = "1",   features = ["full"] }
axum         = { version = "0.7", features = ["ws", "macros"] }
tower        = "0.4"
tower-http   = { version = "0.5", features = ["cors", "trace", "timeout"] }

# ── 数据库 ───────────────────────────────────────────────────────────────────
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }

# ── 序列化 ───────────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
# YAML 1.2 parse for fs.read's parsed `data` (boards are commented YAML; clients get
# JSON so the format never leaves the gateway — docs/arch/WORKBENCH_WRITEBACK.md).
serde_yaml = "0.9"

# ── 类型 ─────────────────────────────────────────────────────────────────────
uuid   = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# ── 认证 ─────────────────────────────────────────────────────────────────────
jsonwebtoken = "9"

# ── 日志 / 追踪 ───────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── 错误处理 ──────────────────────────────────────────────────────────────────
thiserror = "1"
anyhow    = "1"

# ── 配置 ──────────────────────────────────────────────────────────────────────
dotenvy = "0.15"

# ── 并发数据结构 ──────────────────────────────────────────────────────────────
dashmap = "6"

# ── async trait ───────────────────────────────────────────────────────────────
async-trait = "0.1"

# ── LRU 缓存（成员资格缓存）──────────────────────────────────────────────────
lru = "0.12"

# ── Redis（fan-out + bot task dispatch）──────────────────────────────────────
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
futures-util = "0.3"

# ── 密码 / 哈希 ───────────────────────────────────────────────────────────────
sha2    = "0.10"
hex     = "0.4"
getrandom = "0.2"
bcrypt  = "0.15"
base64  = "0.22"
ed25519-dalek = "1"
aes-gcm = "0.10"

# ── Web Push（RFC 8291 加密 + RFC 8292 VAPID，纯 Rust，无 openssl）───────────
p256 = { version = "0.13", features = ["ecdh", "pem"] }
hkdf = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }

# ── S3 ────────────────────────────────────────────────────────────────────────
aws-sdk-s3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
# Integration tests (tests/) are a separate crate: they see only server's
# public API plus these dev-deps, not server's regular dependencies.
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "macros",
    "migrate",
] }
uuid = { version = "1", features = ["v4", "v5"] }
serde_json = "1"
async-trait = "0.1"
