[project]
name = "cheers-voice-transcriber"
version = "0.1.0"
description = "LiveKit microphone-track transcription worker for Cheers"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.10,<4",
  "livekit-agents[openai,silero]==1.6.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
