[package]
name = "cheers-desktop"
version = "0.1.1"
edition = "2021"
description = "Cheers desktop shell for macOS: hosts the web frontend and manages local connector daemons."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "macros"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "blocking"] }
url = "2"
security-framework = "3"
# M1 daemon management: read connector daemon.json, validate TOML configs.
toml = "0.8"
toml_edit = "0.22"
dirs = "5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
# Agent-changes watch (A2): FSEvents-backed local workdir watcher.
notify = "8"
# cheers:// deep links + Finder "Open With" (B5/B6).
tauri-plugin-deep-link = "2"
# In-app updates: signed latest.json feed off the GitHub release (C9).
tauri-plugin-updater = "2"
# relaunch() after an update installs.
tauri-plugin-process = "2"

[profile.release]
strip = true
lto = true
